a11y win: Don't report active windows as having focus

UI Automation gets confused if active windows are reported as having
keyboard focus additionally to the UI element inside the active window
which actually has keyboard focus. This makes UIA synthesizes bogus
UIA:FocusEvents for the active window. And this makes NVDA speak some
texts twice and suppress speaking other texts (e.g. the name of the
actual focus widget).

Reporting the active window as having keyboard focus only if it does
actually have keyboard focus (and not some child widget of the window)
fixes the problem with the bogus UIA:FocusEvents.

This change reverts part of 73ca3dbf490b33159ba66e936bcb11fbcd03e886.

Fixes: QTBUG-90897
Fixes: QTBUG-90899
Pick-to: 6.8
Change-Id: I4d1aeec7ec581730c6a4797a6c95f8b2033dea6d
Reviewed-by: MohammadHossein Qanbari <mohammad.qanbari@qt.io>
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit 9b01520d05beafe39d199298c155217e587a9312)
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>